lang/macro/tests/ui/fail/10-private-constructor.stderr
error: the visibility for constructor of liquid contract should be `pub`
  --> $DIR/10-private-constructor.rs:10:12
   |
10 |         fn constructor(&mut self) {}
   |            ^^^^^^^^^^^
